--- a/config/default_config.json
+++ b/config/default_config.json
@@ -44,7 +44,7 @@
     "application_name": "markdown-to-enex"
   },
   "output_options": {
-    "group_by": "single",
+    "group_by": "full_folder",
     "naming_pattern": "{name}.enex",
     "max_notes_per_file": 0,
     "progress_reporting": true,
