--- a/.gitignore
+++ b/.gitignore
@@ -230,3 +230,6 @@ pyrightconfig.json
 # Project specific exclusions
 news_images/
 **/.claude/settings.local.json
+
+# User configuration
+config/user_config.json
